# COMDEX

./: .dockerignore  .firebaserc  .gitattributes  .gitignore  .pre-commit-config.yaml  COMDEX_Project_Summary.md  Dockerfile  Dockerfile.scheduler  How Everything Works - STICKEY Platform.md  Makefile  PAEV_TestF7_Summary.txt  README.md  SHA256SUMS.artifacts.txt  STOCKS.md  TRADING.md  TREE3_DIMENSIONS.txt  TREE3_PROJECT.txt  _import_test.lean  alembic.ini  auto-fix-imports.py  auto-fix-relative-imports.py  bg01_pin_audit.py  cee_learningcycle_validation.json  check_db.py  check_key.py  check_milestones.py  check_progress.py  clean.sh  cloudbuild.fusion.yaml  cloudbuild.yaml  cloudrun-env.yaml  cloze_test.json  cors_env.yaml  create_E_series_artifacts_skeleton.sh  data  db_check.py  debug_photon_translate.py  demo.photon  demo_container.json  deploy.sh  (+85 more)
.firebase/: hosting.ZnJvbnRlbmQvb3V0.cache
Glyph_Net_Browser/src-tauri/: Cargo.toml  tauri.conf.json
backend/symatics/: README.md  adapter.py  axioms.py  canonicalizer.py  conftest.py  context.py  engine.py  entropy_field.py  glyphs.py  init.py  lean_bridge.py  normalize.py  operator_overloading_layer.py  operators.py  photon.py  photon_symatics_bridge.py  photonic_field.py  pi_phase_validator.py  primitives.py  pyproject.toml  quantum_ops.py  rewrite_rules.py  rewriter.py  sbal_dispatcher.py  semantics.py  signature.py  sym_dynamics.py  sym_io_photonics.py  sym_io_qubit.py  symatics_dispatcher.py  symatics_rulebook.py  symatics_to_codex_rewriter.py  terms.py  theorem_ledger_reader.py  theorem_ledger_writer.py  theorem_summary_generator.py  unified_symbolic_runtime.py  wave.py
backend/symatics/calculus/: symatic_differential.py
backend/symatics/core/: adaptive_laws.py  calc_ops.py  field_coupling_engine.py  flow_operators.py  fusion_ops.py  grad_operators.py  lambda_field.py  meta_axioms_v02.py  resonant_laws.py  srk41_resonant_entropy.py  srk4_resonance.py  srk5_coherent_field.py  srk6_harmonic_coupling.py  srk7_harmonic_resonance.py  srk8_proof_kernel.py  srk_entropy.py  srk_kernel.py  telemetry_channel.py  tensor_field_engine.py  tensor_ops.py  wave_diff_engine.py
backend/symatics/core/validators/: law_check.py  pi_s_closure.py
backend/symatics/docs/: SYMATICS_AXIOMS.md
backend/symatics/operators/: __init__.py  base.py  cancel.py  collapse.py  collapse_wave.py  damping.py  entangle.py  fuse.py  helpers.py  measure.py  project.py  resonance.py  superpose.py
backend/symatics/proofs/: tensor_invariants.lean
backend/symatics/scripts/: symatics_calc_demo_v10.py
backend/symatics/symatics/: laws.py  metrics.py  operators.py  primitives.py  rewrite.py  terms.py  validate.py  wave.py
backend/symatics/symatics/examples/: example_distance_unit.py
backend/symatics/tests/: gen_figures_field_flow.py  gen_figures_resonant_vii.py  gen_figures_tensor_field.py  operator_overloading_layer_test.py  photon_symatics_bridge_test.py  test_adaptive_feedback.py  test_axioms.py  test_bridge.py  test_calc_ops.py  test_canonicalization.py  test_coherent_field_feedback.py  test_engine.py  test_entropy_field.py  test_field_coupling.py  test_fusion_ops.py  test_grad_coupling.py  test_grad_coupling_visual.py  test_grad_operators.py  test_harmonic_coupling.py  test_harmonic_resonance.py  test_lambda_field.py  test_laws.py  test_lean_bridge.py  test_meta_axioms_v02.py  test_operator_registry.py  test_photonic_field.py  test_resonant_entropy_diagnostics.py  test_resonant_laws.py  test_rulebook_laws.py  test_runtime_collapse_conservation.py  test_runtime_collapse_equivalence.py  test_runtime_energy_equivalence.py  test_runtime_entanglement_symmetry.py  test_runtime_fundamental_consistency.py  test_runtime_interference_non_idem.py  test_runtime_lawcheck.py  test_runtime_projection_collapse_consistency.py  test_runtime_registry_integrity.py  test_runtime_resonance_continuity.py  test_runtime_resonance_damping.py  (+21 more)
backend/symatics/tools/: verify_ledger_integrity.py
(+14868 files in other folders)
