[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symatics"
version = "0.1.0"
description = "Symatics: Post-numeric algebra over wave/glyph primitives."
authors = [{name="Your Team", email="team@example.com"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

# -------------------------------
# E6 – CI polish
# -------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
select = ["E", "F", "I"]  # Errors, pyflakes, import order
ignore = ["E501"]         # Ignore long line warning (optional)

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true