# pyproject.toml — consolidated

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessaris-backend"
version = "0.2.0"
description = "Tessaris / Symatics / PhotonLang runtime and tooling."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Tessaris Engineering", email = "team@example.com" }]
dependencies = []

# Console scripts wired to your existing CLI entry points
[project.scripts]
photonlang     = "backend.modules.photonlang.cli:main"
photon-compress= "backend.modules.photonlang.cli:main_compress"
photon-expand  = "backend.modules.photonlang.cli:main_expand"
photon-run     = "backend.modules.photonlang.cli:main_run"

# Optional: editable dev extras (install with: pip install -e .[dev])
[project.optional-dependencies]
dev = [
  "pytest>=7",
  "mypy>=1.7",
  "ruff>=0.6",
  "types-requests",
]

[tool.setuptools]
include-package-data = true

# Find and package the whole backend tree
[tool.setuptools.packages.find]
include = ["backend", "backend.*"]

# -------------------------------
# Test & lint config
# -------------------------------

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # Errors, pyflakes, import order
ignore = ["E501"]         # Optional: ignore long lines

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true